# This program is licensed under the "MIT License".
# Please see the file COPYING in this distribution
# for license terms.

[package]
name = "soln"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
publish = false
description = "Solution to Advent of Code 2019 Day 1."
repository = "http://github.com/BartMassey/advent-of-code-2019"
readme = "README.md"
license = "MIT"

[[bin]]
name = "soln"
path = "soln.rs"

[dependencies.libaoc]
path = "../libaoc"

[dependencies]
