# This program is licensed under the "MIT License".
# Please see the file LICENSE in this distribution
# for license terms.

[package]
name = "soln"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
publish = false
description = "Solution to Advent of Code <year> Day <day>."
repository = "http://github.com/BartMassey/advent-of-code-<year>"
readme = "README.md"
license = "MIT"
edition = "2018"

[[bin]]
name = "soln"
path = "soln.rs"

[dependencies.libaoc]
path = "../libaoc"

[dependencies]
